Fix menu on mobile

--- a/src/component/bar/Menu.css
+++ b/src/component/bar/Menu.css
@@ -68,6 +68,12 @@
 .Menu .navbar-toggler {
     background-color: white;
     opacity: 1;
+    border: none;
+    box-shadow: none;
+}
+
+.Menu .navbar-toggler-icon {
+    color: var(--primary-blue-80);
 }
 
 .Menu .nav-item {
@@ -146,9 +152,19 @@
 }
 
 .Menu .dropdown .h8 {
-    font-family: "Open Sans 600";
+    font-family: "Open Sans 700";
     text-transform: uppercase;
     margin-bottom: 16px;
+}
+
+.Menu .dropdown .sub-box {
+    border-left: 1px solid var(--text-neutral-10);
+    padding-left: 8px;
+    margin: 4px 0px;
+}
+
+.Menu .dropdown .sub-box .dropdown-item {
+    padding: 4px 0px;
 }
 
 
@@ -156,7 +172,7 @@
 
 .Menu-title {
     display: inline;
-    font-family: "Open Sans 600";
+    font-family: "Open Sans 700";
     font-size: 16px;
     line-height: 150%;
 }
@@ -167,13 +183,43 @@
     line-height: 150%;
 }
 
-@media (min-width: 0px) {
+@media (max-width: 992px) {
+    .Menu .navbar-brand {
+        width: 100% !important;
+    }
+
+    .Menu .navbar-brand .logo {
+        width: 400px !important;
+        max-width: calc(100% - 100px);
+        height: auto;
+        max-height: none;
+    }
+
     .Menu .top-right-bar {
         margin-top: 15px;
     }
 
-    .Menu-title {
-        text-align: center;
+    .Menu .top-right-bar button {
+        margin: 16px auto;
+        width: fit-content;
+    }
+
+    .Menu .split-bar {
+        margin: 24px 0px;
+        width: 100%;
+        height: 1px;
+        background-color: var(--text-neutral-10);
+    }
+
+    .Menu .nav-link {
+        padding: 12px 16px;
+        margin-bottom: 8px;
+    }
+
+    .Menu .navbar-toggler {
+        position: absolute;
+        top: 20px;
+        right: 20px;
     }
 }
 
@@ -187,5 +233,9 @@
 
     .Menu-title {
         text-align: left;
+    }
+
+    .Menu .split-bar {
+        display: none;
     }
 }
